2004-05-27  Gary Thomas  <gary@mlbassoc.com>

	* src/redboot_linux_exec.c (do_exec): Be sensitive to value in
	"entry_address" as this can indicate if the image to be executed
	is valid (the "load" functions set it to "NO_MEMORY" when invalid)

2004-05-16  Andrew Dyer  <adyer@righthandtech.com>

	* include/hal_cache.h: Changed the calculation of _IWAY and _DWAY
	for the case where HAL_MIPS_CACHE_INSN_USES_LSB is set to only
	affect the LSBs in the CACHE instruction offset field.  #define
	MIPS cache ops and use them instead of constants in the
	HAL_?CACHE_* macros below.

2004-04-22  Jani Monoses <jani@iv.ro>

	 * cdl/hal_mips.cdl :
	 Invoke tail with stricter syntax that works in latest coreutils. 

2003-08-06  Andy Dyer <adyer@righthandtech.com>

	* include/arch.inc: Changed mask for cause register interrupt bits
	to 0x3f from 0x7f. The extra bit was wrong, but in all current
	implementations, benign.

	* include/mips-stub.h: Disabled use of 64 bit registers for TX49,
	so we can work with the public release compiler.

2003-04-27  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/vectors.S: Pass saved interrupt state pointer to interrupt
	handlers as (undeclared) third argument. Suggested by
	Ryouzaburou Suzuki.

2003-03-11  Mark Salter  <msalter@redhat.com>

	* src/redboot_linux_exec.c (do_exec): Call eth_drv_stop as necessary.

2003-02-27  Nick Garnett  <nickg@calivar.com>

	* include/mips-stub.h: Disabled option that makes MIPS32 targets
	use 64 bit registers in GDB protocol. The standard GDB does not
	support this, only MIPS own version.

2003-01-31  Mark Salter  <msalter@redhat.com>

	* src/hal_syscall.c (hal_syscall_handler): Let generic syscall code
	handle exit.

2003-01-09  Tim Michals  <t.michals@attbi.com>

	* src/hal_misc.c (hal_delay_us): Use HAL_CLOCK_READ instead of inline
	asm, to allow for variant/platform HAL packages overriding.

2002-12-12  Bart Veer  <bartv@ecoscentric.com>

	* include/hal_cache.h: allow for cache flushes etc. where the base