@@ -1,3 +1,8 @@
+2009-02-04  Nick Garnett  <nickg@ecoscentric.com>
+
+	* include/hal_arch.h: Ifdef bit index macros to allow them to be
+	overridden by variant or platform HAL.
+
 2004-05-27  Gary Thomas  <gary@mlbassoc.com>
 
 	* src/redboot_linux_exec.c (do_exec): Be sensitive to value in
